Fixed bug where text was overflowing the given space

--- a/public/styles/feed.css
+++ b/public/styles/feed.css
@@ -37,10 +37,9 @@ article.tweet header {
 }
 
 article.tweet .tweet-content {
-  display: flex;
-  align-items: center;
   height: 90px;
   min-width: 100%;
+  overflow-wrap: break-word;
 }
 
 article.tweet footer {
